--- a/reactDataGrid/client/main.html
+++ b/reactDataGrid/client/main.html
@@ -1,5 +1,6 @@
 <head>
   <title>Simple datagrid</title>
+  <link rel="stylesheet" href="../node_modules/react-datagrid/index.css">
 </head>
  
 <body>
